# time-wars

./: Cargo.toml  README.md
assets/3d/: 0.3d  1.3d  doc.txt
assets/convert/: main.py
assets/convert/data/: file.c4d  file.mtl  tree.3d
assets/shader/: cube_120.glslv  cube_150.glslv
src/client/: consts.rs  gfx_lib.rs  main.rs  math_fx.rs  networking.rs  world.rs
src/client/network_stuff/: main.rs
src/server/: lib.rs
tests/: server.rs
